Fixed overlapping on homepage

--- a/styles.css
+++ b/styles.css
@@ -74,8 +74,6 @@ header {
 */
 
 .container {
-  width: 100%;
-  max-width: 98rem;
   margin: 0 auto;
   padding: 0 1.5rem;
 }
